java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testAddCastHint5-hints.pass
Cast ...o[] to String
Change type of s to Object
